// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCard Not sold out, not featured 1`] = `
<div
  className="event-card-container"
>
  <div
    className="event-card-image-container"
  >
    <img
      alt="name"
      className="event-card-image"
      src="square"
    />
  </div>
  <Text
    className="event-card-date"
  >
    Invalid date
    －
    Invalid date
  </Text>
  <div
    className="event-card-general-info"
  >
    <h2
      className="event-card-name"
    >
      <a
        href="url"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </a>
    </h2>
    <ImportantText>
      venue
    </ImportantText>
    <Text>
      city, country
    </Text>
  </div>
  <MoreInfo
    apple_music_tracks={Array []}
    currency="GBP"
    date="date"
    description="description"
    event_images={
      Object {
        "landscape": "landscape",
        "square": "square",
      }
    }
    featured={false}
    lineup={Array []}
    location={
      Object {
        "city": "city",
        "country": "country",
      }
    }
    name="name"
    sale_start_date="2019-08-19"
    sold_out={false}
    spotify_tracks={Array []}
    ticket_types={
      Array [
        Object {
          "price": Object {
            "total": 400,
          },
        },
        Object {
          "price": Object {
            "total": 800,
          },
        },
      ]
    }
    url="url"
    venue="venue"
  />
  <div
    className="event-card-actions"
  >
    <Button
      theme="blue"
    >
      Book now
    </Button>
    <div
      className="event-card-price"
    >
      <div
        className="event-card-price-from"
      >
        From
      </div>
      <div
        className="event-card-price-value"
      >
        £4
      </div>
    </div>
  </div>
</div>
`;

exports[`EventCard not on sale yet 1`] = `
<div
  className="event-card-container"
>
  <div
    className="event-card-image-container"
  >
    <img
      alt="name"
      className="event-card-image"
      src="square"
    />
    <OnSaleDate
      date="2089-08-19"
    />
  </div>
  <Text
    className="event-card-date"
  >
    Invalid date
    －
    Invalid date
  </Text>
  <div
    className="event-card-general-info"
  >
    <h2
      className="event-card-name"
    >
      <a
        href="url"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </a>
    </h2>
    <ImportantText>
      venue
    </ImportantText>
    <Text>
      city, country
    </Text>
  </div>
  <MoreInfo
    apple_music_tracks={Array []}
    currency="GBP"
    date="date"
    description="description"
    event_images={
      Object {
        "landscape": "landscape",
        "square": "square",
      }
    }
    featured={false}
    lineup={Array []}
    location={
      Object {
        "city": "city",
        "country": "country",
      }
    }
    name="name"
    sale_start_date="2089-08-19"
    sold_out={false}
    spotify_tracks={Array []}
    ticket_types={
      Array [
        Object {
          "price": Object {
            "total": 400,
          },
        },
        Object {
          "price": Object {
            "total": 800,
          },
        },
      ]
    }
    url="url"
    venue="venue"
  />
  <div
    className="event-card-actions"
  >
    <Button
      theme="blue"
    >
      Get reminded
    </Button>
    <div
      className="event-card-price"
    >
      <div
        className="event-card-price-from"
      >
        From
      </div>
      <div
        className="event-card-price-value"
      >
        £4
      </div>
    </div>
  </div>
</div>
`;

exports[`EventCard not sold out, featured 1`] = `
<div
  className="event-card-container"
>
  <div
    className="event-card-image-container"
  >
    <img
      alt="name"
      className="event-card-image"
      src="landscape"
    />
    <Featured />
  </div>
  <Text
    className="event-card-date"
  >
    Invalid date
    －
    Invalid date
  </Text>
  <div
    className="event-card-general-info"
  >
    <h2
      className="event-card-name"
    >
      <a
        href="url"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </a>
    </h2>
    <ImportantText>
      venue
    </ImportantText>
    <Text>
      city, country
    </Text>
  </div>
  <MoreInfo
    apple_music_tracks={Array []}
    currency="GBP"
    date="date"
    description="description"
    event_images={
      Object {
        "landscape": "landscape",
        "square": "square",
      }
    }
    featured={true}
    lineup={Array []}
    location={
      Object {
        "city": "city",
        "country": "country",
      }
    }
    name="name"
    sale_start_date="2019-08-19"
    sold_out={false}
    spotify_tracks={Array []}
    ticket_types={
      Array [
        Object {
          "price": Object {
            "total": 400,
          },
        },
        Object {
          "price": Object {
            "total": 800,
          },
        },
      ]
    }
    url="url"
    venue="venue"
  />
  <div
    className="event-card-actions"
  >
    <Button
      theme="blue"
    >
      Book now
    </Button>
    <div
      className="event-card-price"
    >
      <div
        className="event-card-price-from"
      >
        From
      </div>
      <div
        className="event-card-price-value"
      >
        £4
      </div>
    </div>
  </div>
</div>
`;

exports[`EventCard sold out, not featured 1`] = `
<div
  className="event-card-container"
>
  <div
    className="event-card-image-container"
  >
    <img
      alt="name"
      className="event-card-image"
      src="square"
    />
  </div>
  <Text
    className="event-card-date"
  >
    Invalid date
    －
    Invalid date
  </Text>
  <div
    className="event-card-general-info"
  >
    <h2
      className="event-card-name"
    >
      <a
        href="url"
        rel="noopener noreferrer"
        target="_blank"
      >
        name
      </a>
    </h2>
    <ImportantText>
      venue
    </ImportantText>
    <Text>
      city, country
    </Text>
  </div>
  <MoreInfo
    apple_music_tracks={Array []}
    currency="GBP"
    date="date"
    description="description"
    event_images={
      Object {
        "landscape": "landscape",
        "square": "square",
      }
    }
    featured={false}
    lineup={Array []}
    location={
      Object {
        "city": "city",
        "country": "country",
      }
    }
    name="name"
    sale_start_date="2019-08-19"
    sold_out={true}
    spotify_tracks={Array []}
    ticket_types={
      Array [
        Object {
          "price": Object {
            "total": 400,
          },
        },
        Object {
          "price": Object {
            "total": 800,
          },
        },
      ]
    }
    url="url"
    venue="venue"
  />
  <div
    className="event-card-actions"
  >
    <Button
      theme="disabled"
    >
      Sold out
    </Button>
    <div
      className="event-card-price"
    >
      <div
        className="event-card-price-from"
      >
        From
      </div>
      <div
        className="event-card-price-value"
      >
        £4
      </div>
    </div>
  </div>
</div>
`;
